@@ -6,6 +6,7 @@
  - html export filter creates now valid html documents
  - ablity to print/export only selected items
  - new editor commands
+ - text filter update
 
 0.4.12
  - added man page for abookrc (Alan Ford)
